--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,13 @@
 language: python
 python:
     - "2.7"
+    - "3.4"
+env:
+    PYSAM_VERSION=0.8.3
+    PYSAM_VERSION=0.8.4
 
 install:
+    - pip install -q pyam=$PYSAM_VERSION
     - pip install -r requirements.txt
  
 before_script:
