--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,8 @@ python:
     - "2.7"
     - "3.4"
 env:
-    matrix:
-        PYSAM_VERSION=0.8.3
-        PYSAM_VERSION=0.8.4
+    - PYSAM_VERSION=0.8.3
+    - PYSAM_VERSION=0.8.4
 
 install:
     - pip install -q pysam==$PYSAM_VERSION
