--- a/.travis.yml
+++ b/.travis.yml
@@ -5,18 +5,21 @@ python:
     - "2.7"
     - "3.4"
 env:
-    - PYSAM_VERSION=0.8.3
-    - PYSAM_VERSION=0.8.4
+    global:
+        - COVERALLS_PARALLEL=true
+    matrix:
+        - PYSAM_VERSION=0.8.3
+        - PYSAM_VERSION=0.8.4
 
 install:
     - pip install -q pysam==$PYSAM_VERSION
     - pip install -q -r requirements.txt
- 
+
 before_script:
     - pip install coverage
     - pip install coveralls
 
-script: 
+script:
     - nosetests --with-coverage --verbose --cover-package=ampliconsoftclipper
     - nosetests examples
 
@@ -24,5 +27,6 @@ after_success:
     - coveralls
 
 notifications:
+    webhooks: https://coveralls.io/webhook?repo_token=48uc5NnD0P170im3VqZZCvGWNjXt6CQqC
     email:
         - cgates@umich.edu
