--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_script:
     - pip install coveralls
 
 script:
-    - nosetests --with-coverage --verbose --cover-package=ampliconsoftclipper
+    - nosetests --with-coverage --verbose --cover-package=katana
     - nosetests examples
 
 after_success:
