--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,10 @@ env:
     matrix:
         - PYSAM_VERSION=0.8.3
         - PYSAM_VERSION=0.8.4
-
+        - PYSAM_VERSION=0.9.0
+        - PYSAM_VERSION=0.10.0
+        - PYSAM_VERSION=0.11.0
+        - PYSAM_VERSION=0.12.0
 install:
     - pip install -q pysam==$PYSAM_VERSION
     - pip install -q -r requirements.txt
@@ -20,8 +23,8 @@ before_script:
     - pip install coveralls
 
 script:
-    - nosetests --with-coverage --verbose --cover-package=katana
-    - nosetests examples
+    - nosetests -s --with-coverage --verbose --cover-package=katana
+    - nosetests -s examples
 
 after_success:
     - coveralls
