--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,19 @@
-#cgates: 2/4/2016
+#cgates: 11/1/2017
 
 language: python
 python:
-    - "2.7"
+#    - "2.7"
     - "3.4"
 env:
     global:
         - COVERALLS_PARALLEL=true
     matrix:
         - PYSAM_VERSION=0.8.3
-        - PYSAM_VERSION=0.8.4
-        - PYSAM_VERSION=0.9.0
-        - PYSAM_VERSION=0.10.0
-        - PYSAM_VERSION=0.11.0
-        - PYSAM_VERSION=0.12.0
+#        - PYSAM_VERSION=0.8.4
+#        - PYSAM_VERSION=0.9.0
+#        - PYSAM_VERSION=0.10.0
+#        - PYSAM_VERSION=0.11.0
+#        - PYSAM_VERSION=0.12.0
 install:
     - pip install -q pysam==$PYSAM_VERSION
     - pip install -q -r requirements.txt
