--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@
 
 language: python
 python:
- #   - "2.7"
+    - "2.7"
     - "3.4"
 env:
     global:
@@ -11,7 +11,7 @@ env:
 #        - PYSAM_VERSION=0.8.3
 #        - PYSAM_VERSION=0.8.4
         - PYSAM_VERSION=0.9.0
-#        - PYSAM_VERSION=0.10.0
+        - PYSAM_VERSION=0.10.0
 #        - PYSAM_VERSION=0.11.0
 #        - PYSAM_VERSION=0.12.0
 install:
