--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,12 @@ env:
     global:
         - COVERALLS_PARALLEL=true
     matrix:
-#        - PYSAM_VERSION=0.8.3
-#        - PYSAM_VERSION=0.8.4
+        - PYSAM_VERSION=0.8.3
+        - PYSAM_VERSION=0.8.4
         - PYSAM_VERSION=0.9.0
         - PYSAM_VERSION=0.10.0
-#        - PYSAM_VERSION=0.11.0
-#        - PYSAM_VERSION=0.12.0
+        - PYSAM_VERSION=0.11.0
+        - PYSAM_VERSION=0.12.0
 install:
     - pip install `grep cython requirements.txt`
     - pip install -q pysam==$PYSAM_VERSION
